--- a/nuxtjs/assets/styles/tailwind.css
+++ b/nuxtjs/assets/styles/tailwind.css
@@ -7,6 +7,9 @@
     /* @apply bg-gradient-to-br from-white to-[#f0f4ff] dark:from-gray-800 dark:to-[#1a237e]; */
     @apply hover:bg-indigo-100/30;
 }
+.bg-second{
+    @apply bg-gradient-to-br from-[#f0f4ff] to-white dark:from-gray-800/50 dark:to-[#1a237e]/30;
+}
 .bg-custom-solid{
     @apply bg-indigo-500 dark:bg-indigo-400;
 }
